Version 1pl3 - released 2012-01-24
cmb	improved handling of relocation after saving
cmb	added Polish translation (contributed by learnandcode)
cmb	updated manual accordingly

Version 1pl2 - released 2012-01-21
cmb	added plugin icon
cmb	extended copyright to 2012
cmb	fixed minor bug: save button in toolbar was not hidden, if irregular sitestructure was found
cmb	inhibited renaming of page, if its heading is only partially formatted
cmb	fixed minor bug in jstree: D&D inside a node didn't work
cmb	made some minor cosmetic changes
cmb	added Russian translation (contributed by Termin)
cmb	updated manual accordingly

Version 1pl1 - released 2011-12-16
cmb	removed beta warning in manual
cmb	cosmetic changes in manual
cmb	added defaultconfig.php for CMSimple_XH 1.5

Version 1 - released 2011-11-16
cmb	added french language file (provided by Bob)

Version 1rc4 - released 2011-10-23
cmb	made plugin administration available, even if another external pagemanager is configured
cmb	changed YES/NO in configuration to true/false
cmb	changed languages files accordingly

Version 1rc3 - internally released 2011-10-14
cmb	minimal cosmetic changes
cmb	updated czech language file (provided by oldnema)
cmb	updated danish language file
cmb	added: resign if external pagemanager is configured in CMSimple_XH 1.5

Version 1rc2 - released 2011-09-30
cmb	minimal cosmetic changes
cmb	added hook for new edit menu of CMSimple_XH 1.5
cmb	updated jsTree to pre1.0fix1

Version 1rc1 - released 2011-09-23
cmb	minimal cosmetic changes and optimisations
cmb	actually included danish translation
cmb	updated language files

Version 1beta6 - released 2011-08-12
cmb	fixed bug regarding page titles starting with a digit (reported by Ulrich)

Version 1beta5 - released 2011-08-11
cmb	added danish translation (provided by maeg)
cmb	fixed bug with formatted headings (reported by bd0 and Gert)

Version 1beta4 - released 2011-08-10
cmb	fixed bug with html special chars in page titles (reported by Gert)